@@ -16,19 +16,6 @@ comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more
 end_comment
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|index
-operator|.
-name|IndexableField
-import|;
-end_import
-begin_import
-import|import
 name|java
 operator|.
 name|io
@@ -156,22 +143,19 @@ specifier|final
 name|int
 name|getOffsetGap
 parameter_list|(
-name|IndexableField
-name|field
+name|String
+name|fieldName
 parameter_list|)
 block|{
 return|return
 name|getWrappedAnalyzer
 argument_list|(
-name|field
-operator|.
-name|name
-argument_list|()
+name|fieldName
 argument_list|)
 operator|.
 name|getOffsetGap
 argument_list|(
-name|field
+name|fieldName
 argument_list|)
 return|;
 block|}
