@@ -219,6 +219,19 @@ name|lucene
 operator|.
 name|document
 operator|.
+name|StringField
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
 name|TextField
 import|;
 end_import
@@ -12039,6 +12052,211 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testDontInvokeAnalyzerForUnAnalyzedFields
+specifier|public
+name|void
+name|testDontInvokeAnalyzerForUnAnalyzedFields
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|Analyzer
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|TokenStreamComponents
+name|createComponents
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|,
+name|Reader
+name|reader
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"don't invoke me!"
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|int
+name|getPositionIncrementGap
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"don't invoke me!"
+argument_list|)
+throw|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|int
+name|getOffsetGap
+parameter_list|(
+name|String
+name|fieldName
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IllegalStateException
+argument_list|(
+literal|"don't invoke me!"
+argument_list|)
+throw|;
+block|}
+block|}
+decl_stmt|;
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+name|analyzer
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|FieldType
+name|customType
+init|=
+operator|new
+name|FieldType
+argument_list|(
+name|StringField
+operator|.
+name|TYPE_NOT_STORED
+argument_list|)
+decl_stmt|;
+name|customType
+operator|.
+name|setStoreTermVectors
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|customType
+operator|.
+name|setStoreTermVectorPositions
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|customType
+operator|.
+name|setStoreTermVectorOffsets
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|Field
+name|f
+init|=
+name|newField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"abcd"
+argument_list|,
+name|customType
+argument_list|)
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+name|Field
+name|f2
+init|=
+name|newField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|""
+argument_list|,
+name|customType
+argument_list|)
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f2
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|w
 operator|.
 name|close
 argument_list|()
